--- a/index.html
+++ b/index.html
@@ -323,40 +323,62 @@ Kinetic Equations <br/>
     <section id="four">
         <h2> Community and Volunteering</h2>
         <ul>
-            <li>Reviewer for the
-                <i><a href="https://link.springer.com/journal/10915">Journal of Scientific Computing</a></i>
+            <li>Reviewer for the Journals
+                 <ul>
+                    <li>
+                        <i><a href="https://link.springer.com/journal/10915">Journal of Scientific Computing</a></i>
+                    </li>
+                      <li>
+                             <i><a href="https://www.sciencedirect.com/journal/journal-of-computational-physics">Journal of Computational Physics</a></i>
+                      </li>
+                      <li>
+                               <i><a href="https://www.siam.org/publications/journals/multiscale-modeling-and-simulation-a-siam-interdisciplinary-journal-mms">SIAM Multiscale Methods and Simulation</a></i>
+                      </li>
+                     <li>
+                               <i><a href="https://link.springer.com/journal/10957">Journal of Optimization Theory and Applications</a></i>
+                     </li>
+                 </ul>
             </li>
-             <li>Reviewer for the
-                <i><a href="https://www.sciencedirect.com/journal/journal-of-computational-physics">Journal of Computational Physics</a></i>
-            </li>
-            <li>Reviewer for
-                <i><a href="https://www.siam.org/publications/journals/multiscale-modeling-and-simulation-a-siam-interdisciplinary-journal-mms">SIAM Multiscale Methods and Simulation</a></i>
-            </li>
-            <li>Reviewer for the
-                <i><a href="https://iclr.cc/">ICLR 2025 Conference</a></i>
-            </li>
-            <li>Reviewer for the
-                <i><a href="https://aaai.org/conference/aaai/aaai-25/">AIAA 2025 Conference</a></i>
-            </li>
-             <li>Reviewer for the
-                <i><a href="https://nips.cc/">NeurIPS 2024 Conference</a></i>
-                <br/>
-            </li>
-            <li>Reviewer for the
-                <i><a href="https://icml.cc/">ICML 2024 Conference</a></i>
-            </li>
-            <li>Reviewer for the
-                <i><a href="https://nips.cc/">NeurIPS 2023 Conference</a></i>
 
-            </li>
-            <li>Organization of the
-                <i><a href="https://indico.scc.kit.edu/event/659/">International Workshop on Moment Methods in Kinetic
+            <li>Reviewer for the conferences
+               <ul>
+                 <li>
+                    <i><a href="https://icml.cc/">ICML 2025 Conference</a></i>
+                 </li>
+                 <li>
+                    <i><a href="https://iclr.cc/">ICLR 2025 Conference</a></i>
+                </li>
+                <li>
+                    <i><a href="https://nips.cc/">NeurIPS 2024 Conference</a></i>
+                </li>
+                    <li>
+                    <i><a href="https://icml.cc/">ICML 2024 Conference</a></i>
+                </li>
+                   <li>
+                     <i><a href="https://aaai.org/conference/aaai/aaai-25/">AIAA 2025 Conference</a></i>
+                </li>
+                    <li>
+                      <i><a href="https://nips.cc/">NeurIPS 2023 Conference</a></i>
+                </li>
+               </ul>
+
+                  <li>Organization of the
+               <ul>
+                 <li>
+                      <i><a href="https://indico.scc.kit.edu/event/659/">International Workshop on Moment Methods in Kinetic
                     Theory IV</a></i>
-            </li>
+                 </li>
+                 <li>
+                       <i> Minisymposium "Advances in High Dimensional PDE Methods using Sparse Grids and Low-Rank" at the <a href=https://www.siam.org/conferences-events/siam-conferences/cse25/>SIAM CSE 2025 </a> conference</i>
+                </li>
+                <li>
+                     <i> Minisymposium "Federated Learning and Data Mining in Distributed Environments" at the <a href=https://math.utk.edu/siam-seas/>SIAM SEAS 2025 </a> conference</i>
+                </li>
+               </ul>
         </ul>
     </section>
     <section id="five">
-        <h2> Conferences </h2>
+        <h2> Conference Presentations </h2>
         <ul>
              <li>Federated Dynamical Low-Rank Training with Global Loss Convergence Guarantees<br/>
                 <i><a href="https://federated-learning.org/fl@fm-neurips-2024/">International Workshop on Federated Foundation Models
