--- a/index.html
+++ b/index.html
@@ -380,6 +380,16 @@ Kinetic Equations <br/>
     <section id="five">
         <h2> Conference Presentations </h2>
         <ul>
+            <li>Geometric integration for parameter efficient fine-tuning of neural networks<br/>
+                <i><a href="https://math.utk.edu/siam-seas/schedule/">SIAM SEAS 2025 Conference </a></i>
+                <br/>
+                March 2025
+            </li>
+            <li>Federated Dynamical Low-Rank Training with Global Loss Convergence Guarantees<br/>
+                <i><a href="https://math.utk.edu/siam-seas/schedule/">SIAM SEAS 2025 Conference </a></i>
+                <br/>
+                March 2025
+            </li>
              <li>Federated Dynamical Low-Rank Training with Global Loss Convergence Guarantees<br/>
                 <i><a href="https://federated-learning.org/fl@fm-neurips-2024/">International Workshop on Federated Foundation Models
 In Conjunction with NeurIPS 2024 </a></i>
