--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ In Conjunction with NeurIPS 2024 </a></i>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-gray-800 dark:text-gray-200">
     <article class="bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-md">
       <a href="https://github.com/CSMMLab/KiT-RT" class="block mb-4">
-        <img src="img_news/KiT-RT_logo_small.png" alt="KiT-RT Logo" class="w-full object-contain" />
+        <img src="assets/KiT-RT_logo_small.png" alt="KiT-RT Logo" class="w-full object-contain" />
       </a>
       <h3 class="text-xl font-semibold mb-2">
         KiT-RT
@@ -392,7 +392,7 @@ In Conjunction with NeurIPS 2024 </a></i>
 
     <article class="bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-md">
       <a href="https://su2code.github.io/" class="block mb-4">
-        <img src="img_news/logoSU2.png" alt="SU2 Logo" class="w-full object-contain" />
+        <img src="assets/logoSU2.png" alt="SU2 Logo" class="w-full object-contain" />
       </a>
       <h3 class="text-xl font-semibold mb-2">
         SU2
