--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <p class="mt-4 text-xl text-gray-700 dark:text-gray-300">Research Scientist in AI & Mathematics</p>
         <p class="mt-2 text-gray-600 dark:text-gray-400">Efficient Deep Learning · Optimization · HPC</p>
         <div class="mt-6 flex justify-center md:justify-start gap-4">
-          <a href="CV_Steffen.pdf" class="px-4 py-2 bg-black text-white rounded hover:bg-gray-800">Download CV</a>
-          <a href="#contact" class="px-4 py-2 border border-gray-600 dark:border-gray-400 rounded hover:bg-gray-100 dark:hover:bg-gray-700">Contact Me</a>
+         <!--  <a href="CV_Steffen.pdf" class="px-4 py-2 bg-black text-white rounded hover:bg-gray-800">Download CV</a>
+          <a href="#contact" class="px-4 py-2 border border-gray-600 dark:border-gray-400 rounded hover:bg-gray-100 dark:hover:bg-gray-700">Contact Me</a>-->
         </div>
         <div class="mt-4 flex justify-center md:justify-start gap-4">
           <a href="https://github.com/ScSteffen" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
@@ -59,6 +59,7 @@
            <a href="https://scholar.google.com/citations?user=dZqiHeMAAAAJ" target="_blank" rel="noopener noreferrer" aria-label="Google Scholar">
             <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg"><title>Google Scholar icon</title><path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg>
           </a>
+             steffen [dot] schotthoefer [at] gmail [dot] com
         </div>
       </div>
     </div>
@@ -68,7 +69,7 @@
   <section id="about" class="max-w-4xl mx-auto px-4 py-16">
     <h3 class="text-2xl font-bold mb-4">About Me</h3>
     <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-      I'm a research scientist working at the intersection of applied mathematics and machine learning.
+      I'm a research scientist working at the intersection of applied mathematics, HPC and machine learning.
       My focus is on efficient AI, model compression, and scalable optimization methods.
     </p>
 <br />
@@ -426,7 +427,7 @@ In Conjunction with NeurIPS 2024 </a></i>
     <h3 class="text-2xl font-bold mb-4">Contact</h3>
     <p class="text-gray-600 dark:text-gray-300 mb-2">Open to research and applied AI opportunities.</p>
    <span>steffen [dot] schotthoefer [at] gmail [dot] com</span></a></br></br>
-      <a href="CV_Steffen.pdf" class="inline-block px-6 py-3 bg-black text-white rounded hover:bg-gray-800">Download CV</a>
+      <!-- <a href="CV_Steffen.pdf" class="inline-block px-6 py-3 bg-black text-white rounded hover:bg-gray-800">Download CV</a>-->
   </section>
 
   <!-- Footer -->
