--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
            <a href="https://scholar.google.com/citations?user=dZqiHeMAAAAJ" target="_blank" rel="noopener noreferrer" aria-label="Google Scholar">
             <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg"><title>Google Scholar icon</title><path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg>
           </a>
-             steffen [dot] schotthoefer [at] gmail [dot] com
         </div>
       </div>
     </div>
@@ -80,6 +79,8 @@
       <li>Scalable & distributed machine learning</li>
        <!-- <li>Mathematical foundations of deep learning</li>-->
     </ul>
+      <br /><br />
+                      <p class="text-gray-600 dark:text-gray-300 mb-2">Open for research and applied AI opportunities.</p>
   </section>
 
   <!-- Publications -->
@@ -424,9 +425,8 @@ In Conjunction with NeurIPS 2024 </a></i>
 
   <!-- Contact -->
   <section id="contact" class="text-center py-16 px-4 bg-gray-100 dark:bg-gray-800">
-    <h3 class="text-2xl font-bold mb-4">Contact</h3>
-    <p class="text-gray-600 dark:text-gray-300 mb-2">Open to research and applied AI opportunities.</p>
-   <span>steffen [dot] schotthoefer [at] gmail [dot] com</span></a></br></br>
+    <!--<h3 class="text-2xl font-bold mb-4">Contact</h3>-->
+    <p class="text-gray-600 dark:text-gray-300 mb-2">Open for research and applied AI opportunities.</p>
       <!-- <a href="CV_Steffen.pdf" class="inline-block px-6 py-3 bg-black text-white rounded hover:bg-gray-800">Download CV</a>-->
   </section>
 
