--- a/index.html
+++ b/index.html
@@ -2,20 +2,67 @@
 <html lang="en">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Steffen Schotthöfer</title>
+    <!-- Google Analytics 4 — replace G-XXXXXXXXXX with your measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
+    <title>Steffen Schotthöfer – Research Scientist in AI & Mathematics</title>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+    <!-- Basic meta -->
     <meta name="author" content="Steffen Schotthöfer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Steffen Schotthöfer | Research Scientist in AI & Mathematics | Efficient Deep Learning, Optimization, HPC">
-    <meta name="keywords" content="Steffen Schotthöfer, AI, Mathematics, Efficient Deep Learning, Optimization, HPC, Low-Rank Training">
+    <meta name="description" content="Steffen Schotthöfer — Research Scientist in AI and Mathematics. Focused on efficient deep learning, low-rank training, model compression, and scalable optimization.">
+    <meta name="keywords" content="Steffen Schotthöfer, AI, Mathematics, Efficient Deep Learning, Low-Rank Training, Model Compression, Optimization, HPC, NeurIPS, ICML, ICLR, GeoLoRA">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://scsteffen.github.io/">
+
+    <!-- Open Graph -->
     <meta property="og:title" content="Steffen Schotthöfer – Research Scientist in AI & Mathematics">
-    <meta property="og:description" content="Applied mathematician and AI researcher focused on efficient deep learning and optimization.">
+    <meta property="og:description" content="Applied mathematician and AI researcher focused on efficient deep learning, low-rank training, and scalable optimization.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://scsteffen.github.io/">
+    <meta property="og:image" content="https://scsteffen.github.io/assets/headshot.jpeg">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Steffen Schotthöfer">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Steffen Schotthöfer – Research Scientist in AI & Mathematics">
+    <meta name="twitter:description" content="Applied mathematician and AI researcher focused on efficient deep learning, low-rank training, and scalable optimization.">
+    <meta name="twitter:image" content="https://scsteffen.github.io/assets/headshot.jpeg">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Steffen Schotthöfer",
+      "url": "https://scsteffen.github.io/",
+      "image": "https://scsteffen.github.io/assets/headshot.jpeg",
+      "jobTitle": "Research Scientist",
+      "description": "Research Scientist in AI and Mathematics focused on efficient deep learning, low-rank training, and scalable optimization.",
+      "sameAs": [
+        "https://github.com/ScSteffen",
+        "https://www.linkedin.com/in/steffen-schotthoefer",
+        "https://scholar.google.com/citations?user=dZqiHeMAAAAJ"
+      ],
+      "knowsAbout": ["Efficient Deep Learning", "Low-Rank Training", "Model Compression", "Optimization", "High Performance Computing"],
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "Karlsruhe Institute of Technology"
+      }
+    }
+    </script>
 
     <link rel="icon" type="image/jpeg" href="assets/headshot.jpeg">
 </head>
@@ -82,7 +129,7 @@
 
 
 <!-- Research Interests -->
-<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-about" id="about"><heading>Research Interests</heading></button>
+<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-about" id="about"><heading>Research Interests</heading></button> <a href="#" style="font-size:12px;">[back to top]</a>
 <div id="content-about" class="collapse in">
     <div style="padding:10px; width:100%; margin-right:auto; margin-left:auto;">
         <p>&bull; Efficient AI models and compression</p>
@@ -95,7 +142,7 @@
 
 <!-- Publications -->
 
-<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-publications" id="publications"><heading>Selected Publications</heading></button>
+<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-publications" id="publications"><heading>Selected Publications</heading></button> <a href="#" style="font-size:12px;">[back to top]</a>
 <div id="content-publications" class="collapse in">
 
 <!-- 2026 -->
@@ -390,7 +437,7 @@
 
 <!-- Software Projects -->
 
-<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-software" id="software"><heading>Software Projects</heading></button>
+<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-software" id="software"><heading>Software Projects</heading></button> <a href="#" style="font-size:12px;">[back to top]</a>
 <div id="content-software" class="collapse in">
 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr>
@@ -438,7 +485,7 @@
 
 <!-- Conferences / Presentations -->
 
-<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-conferences" id="conferences"><heading>Presentations</heading></button>
+<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-conferences" id="conferences"><heading>Presentations</heading></button> <a href="#" style="font-size:12px;">[back to top]</a>
 <div id="content-conferences" class="collapse in">
     <div style="padding:10px; width:100%; margin-right:auto; margin-left:auto;">
         <p>&bull; Geometric integration for parameter efficient fine-tuning of neural networks — <a href="https://math.utk.edu/siam-seas/schedule/" target="_blank">SIAM SEAS 2025</a>, March 2025</p>
@@ -467,7 +514,7 @@
 
 <!-- Community & Volunteering -->
 
-<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-volunteering" id="volunteering"><heading>Community & Volunteering</heading></button>
+<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-volunteering" id="volunteering"><heading>Community & Volunteering</heading></button> <a href="#" style="font-size:12px;">[back to top]</a>
 <div id="content-volunteering" class="collapse in">
     <div style="padding:10px; width:100%; margin-right:auto; margin-left:auto;">
 
@@ -478,9 +525,10 @@
         <p>&bull; <a href="https://link.springer.com/journal/10957" target="_blank">Journal of Optimization Theory and Applications</a></p>
 
         <p style="margin-top:15px;"><strong>Conference Reviewer</strong></p>
-        <p>&bull; <a href="https://icml.cc/" target="_blank">NeurIPS 2025</a>, <a href="https://icml.cc/" target="_blank">ICML 2025</a>, <a href="https://iclr.cc/" target="_blank">ICLR 2025</a></p>
-        <p>&bull; <a href="https://nips.cc/" target="_blank">NeurIPS 2024</a>, <a href="https://icml.cc/" target="_blank">ICML 2024</a></p>
-        <p>&bull; <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI 2025</a>, <a href="https://nips.cc/" target="_blank">NeurIPS 2023</a></p>
+        <p>&bull; <a href="https://neurips.cc/" target="_blank">NeurIPS</a> 2023, 2024, 2025 [top reviewer]</p>
+        <p>&bull; <a href="https://icml.cc/" target="_blank">ICML</a> 2024, 2025, 2026</p>
+        <p>&bull; <a href="https://iclr.cc/" target="_blank">ICLR</a> 2025</p>
+        <p>&bull; <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI</a> 2025</p>
 
         <p style="margin-top:15px;"><strong>Organization</strong></p>
         <p>&bull; <a href="https://indico.scc.kit.edu/event/659/" target="_blank">International Workshop on Moment Methods in Kinetic Theory IV</a></p>
