--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                             &nbsp;|&nbsp;
                             <a href="#conferences">Presentations</a>
                             &nbsp;|&nbsp;
+                            <a href="#mentorship">Mentorship</a>
+                            &nbsp;|&nbsp;
                             <a href="#volunteering">Volunteering</a>
                             &nbsp;|&nbsp;
                             </p>
@@ -507,6 +509,21 @@
         <p>&bull; A structure-preserving surrogate model for the closure of the moment system of the Boltzmann equation — <a href="https://arc.aiaa.org/doi/10.2514/6.2021-2895" target="_blank">AIAA AVIATION 2021 FORUM</a>, August 2021</p>
         <p>&bull; Windowing Regularization Techniques for Unsteady Aerodynamic Shape Optimization — <a href="https://arc.aiaa.org/doi/10.2514/6.2020-3130" target="_blank">AIAA AVIATION 2020 FORUM</a>, June 2020</p>
         <p>&bull; Windowing Regularization Techniques for Unsteady Aerodynamic Shape Optimization — <a href="https://su2foundation.org/su2conference2020/" target="_blank">SU2 Conference 2020</a> [<a href="https://www.youtube.com/watch?v=KENu6l-B2O4&feature=youtu.be" target="_blank">recorded talk</a>], June 2020</p>
+    </div>
+</div>
+<hr class="soft">
+
+
+<!-- Students & Mentorship -->
+
+<button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-mentorship" id="mentorship"><heading>Students & Mentorship</heading></button> <a href="#" style="font-size:12px;">[back to top]</a>
+<div id="content-mentorship" class="collapse in">
+    <div style="padding:10px; width:100%; margin-right:auto; margin-left:auto;">
+        <p>I have had the pleasure of working with several talented students over the years on topics ranging from efficient deep learning to scientific computing. An incomplete list can be found below.</p>
+        <p>&bull; Thomas Snyder, summer intern at Oak Ridge National Lab 2024 & 2026, currently undergrad at Yale</p>
+        <p>&bull; First Last, Mentorship Situation [Year], Current Affiliation</p>
+        <p>&bull; First Last, Mentorship Situation [Year], Current Affiliation</p>
+        <p>&bull; First Last, Mentorship Situation [Year], Current Affiliation</p>
     </div>
 </div>
 <hr class="soft">
